force-app/main/default/objects/Callback_Request__c/Callback_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object used for
Callback request for 5 Days SLA via Push Omni Channel
Callback reminders via Push Omni Channel</description>
    <label>Callback</label>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Callback</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>