force-app/main/default/objects/Callback_Request__c/fields/CaseBusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>CaseBusinessHoursId__c</fullName>
    <description>Holds Case Business Hours Id to avoid re-query.</description>
    <label>CaseBusinessHoursId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>