force-app/main/default/objects/Callback_Request__c/fields/ReExecutionDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReExecutionDateTime__c</fullName>
    <description>This field is used to re-route callback to queue after X hour(s). 
X hour(s) logic is defined in Trigger (Callback Request).

Also, using same field for callback reminders.</description>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>