force-app/main/default/objects/Callback_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status field to control the processing of callback request and reminders.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Case Unresolved</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>No Voicemail</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Assigned to Agent</fullName>
                <isActive>false</isActive>
                <label>Assigned to Agent</label>
            </value>
            <value>
                <fullName>Assigned to Queue</fullName>
                <isActive>false</isActive>
                <label>Assigned to Queue</label>
            </value>
            <value>
                <fullName>No Response</fullName>
                <isActive>false</isActive>
                <label>No Response</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Reminder Is Due</fullName>
                <isActive>false</isActive>
                <label>Reminder Is Due</label>
            </value>
            <value>
                <fullName>Resolved and Closed</fullName>
                <isActive>false</isActive>
                <label>Resolved and Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>