force-app/main/default/objects/Callback_Request__c/recordTypes/SSSW_Callback_Reminder.recordType-meta.xml
<RecordType>
    <fullName>SSSW_Callback_Reminder</fullName>
    <active>true</active>
    <description>To create manual Callback Reminder for Case</description>
    <label>Callback Reminder</label>
</RecordType>