force-app/main/default/objects/Callback_Request__c/recordTypes/SSSW_Callback_Request.recordType-meta.xml
<RecordType>
    <fullName>SSSW_Callback_Request</fullName>
    <active>true</active>
    <description>Auto created Callback Request for Case SLAs</description>
    <label>Callback Request</label>
</RecordType>