force-app/main/default/objects/Callback_Request__c/validationRules/Agent_cant_change_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Agent_cant_change_owner</fullName>
    <active>true</active>
    <description>Only team leader is allowed to change the owner.</description>
    <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
NOT($Permission.SSSW_Omni_Supervisor_PermSet),
NOT(ISPICKVAL(CaseId__r.Status, &quot;Closed&quot;)),
NOT(RecordType.DeveloperName == &apos;SSSW_Callback_Reminder&apos;)
)</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Callback Request Owner cannot be changed.</errorMessage>
</ValidationRule>