force-app/main/default/objects/Callback_Request__c/validationRules/AgentCantChangeStatusForNewCBR.validationRule-meta.xml
<ValidationRule>
    <fullName>AgentCantChangeStatusForNewCBR</fullName>
    <active>true</active>
    <description>Agents are not allowed to change the status when CBR is new.</description>
    <errorConditionFormula>AND(
ISNEW(),
(RecordType.DeveloperName == &apos;SSSW_Callback_Reminder&apos;),
NOT((ISPICKVAL(Status__c, &apos;New&apos;)))
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot be changed.</errorMessage>
</ValidationRule>