force-app/main/default/objects/Callback_Request__c/validationRules/Cannot_change_CB_record_status_to_new.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_CB_record_status_to_new</fullName>
    <active>true</active>
    <description>Once a user has accepted a Callback request, user cannot change the status to new. Only team leaders are allowed.</description>
    <errorConditionFormula>AND(
    NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;New&apos;)), 
    NOT(ISCHANGED(OwnerId)),
    LEFT(OwnerId,3) =&apos;005&apos;,
    ISPICKVAL(Status__c, &apos;New&apos;),
    NOT($Permission.SSSW_Omni_Supervisor_PermSet)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot change status to new</errorMessage>
</ValidationRule>