force-app/main/default/objects/Callback_Request__c/validationRules/CloseStatusCantBeChangedtoNew.validationRule-meta.xml
<ValidationRule>
    <fullName>CloseStatusCantBeChangedtoNew</fullName>
    <active>true</active>
    <description>Callback reminder cannot be reopened</description>
    <errorConditionFormula>AND(
ISCHANGED(Status__c),
TEXT(PRIORVALUE(Status__c )) == &apos;Closed&apos;,
(RecordType.DeveloperName == &apos;SSSW_Callback_Reminder&apos;)
)</errorConditionFormula>
    <errorMessage>Closed reminders cannot be re-opened.</errorMessage>
</ValidationRule>