force-app/main/default/objects/Callback_Request__c/validationRules/RestrictNewRecordIfCaseIsClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictNewRecordIfCaseIsClosed</fullName>
    <active>true</active>
    <description>Restrict new record creation if case is closed.</description>
    <errorConditionFormula>AND(
ISNEW(),
ISPICKVAL(CaseId__r.Status, &apos;Closed&apos;),
(RecordType.DeveloperName == &apos;SSSW_Callback_Reminder&apos;)
)</errorConditionFormula>
    <errorMessage>Callback reminder cannot be created for closed case.</errorMessage>
</ValidationRule>