force-app/main/default/objects/Callback_Request__c/listViews/All_Callback_Requests.listView-meta.xml
<ListView>
    <fullName>All_Callback_Requests</fullName>
    <columns>NAME</columns>
    <columns>CaseId__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Callback Requests</label>
</ListView>