force-app/main/default/objects/Callback_Request__c/listViews/My_Callback_Reminders.listView-meta.xml
<ListView>
    <fullName>My_Callback_Reminders</fullName>
    <columns>NAME</columns>
    <columns>CaseId__c</columns>
    <columns>Case_Contact__c</columns>
    <columns>Type__c</columns>
    <columns>ReExecutionDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Callback_Request__c.SSSW_Callback_Reminder</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>My Callback Reminders</label>
    <language>en_US</language>
</ListView>