force-app/main/default/objects/Callback_Request__c/listViews/My_Callback_Requests.listView-meta.xml
<ListView>
    <fullName>My_Callback_Requests</fullName>
    <columns>NAME</columns>
    <columns>CaseId__c</columns>
    <columns>ReExecutionDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Callback_Request__c.SSSW_Callback_Request</value>
    </filters>
    <label>My Callback Requests</label>
    <language>en_US</language>
</ListView>