force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Business_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Business_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder Business</label>
    <queue>SSSW_Business</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>