force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Callback_Reminder_Holding_Queue_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Callback_Reminder_Holding_Queue_Callback_Request</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ReExecutionDateTime__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Queue</filterScope>
    <label>SSSW Do not use CB Reminder Holding</label>
    <language>en_US</language>
    <queue>SSSW_Callback_Reminder_Holding_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>