force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Callback_Request_Closed_Queue_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Callback_Request_Closed_Queue_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Do not Use  CB Request Closed</label>
    <queue>SSSW_Callback_Request_Closed_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>