force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Callback_Request_Queue_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Callback_Request_Queue_Callback_Request</fullName>
    <columns>NAME</columns>
    <columns>CaseId__c</columns>
    <columns>CaseBusinessHoursId__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ReExecutionDateTime__c</columns>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Request Queue</label>
    <queue>SSSW_Callback_Request_Queue</queue>
</ListView>