force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Consumer_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Consumer_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder Consumer</label>
    <queue>SSSW_Consumer</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>