force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Digital_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Digital_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder Digital</label>
    <queue>SSSW_Digital</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>