force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Disputed_Delivery_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Disputed_Delivery_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder Disputed Delivery</label>
    <queue>SSSW_Disputed_Delivery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>