force-app/main/default/objects/Callback_Request__c/listViews/SSSW_FCR_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_FCR_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder FCR</label>
    <queue>SSSW_FCR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>