force-app/main/default/objects/Callback_Request__c/listViews/SSSW_International_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_International_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder International</label>
    <queue>SSSW_International</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>