force-app/main/default/objects/Callback_Request__c/listViews/SSSW_Other_Callback_Request.listView-meta.xml
<ListView>
    <fullName>SSSW_Other_Callback_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>SSSW Callback Reminder Other</label>
    <queue>SSSW_Other</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>